# ai4Local

./: .eslintrc.json  .gitignore  .prettierrc.json  package.json  readme.md  skaffold.yaml  tsconfig.json  turbo.json
.github/: copilot-instructions.md
.github/instructions/: n8n.instructions.md  python.instructions.md  web.instructions.md
.github/workflows/: ci-cd.yml
.turbo/cache/: b84da3eb7fa33d39-meta.json  b84da3eb7fa33d39.tar.zst
ai4Local/apps/web/src/hooks/: useCustomers.ts  useTraining.ts
apps/docs/: NEXTJS15_MIGRATION.md  README.md  cahier-des-charges.md
apps/docs/app/: next.config.js  package.json
apps/mobile/: package.json
apps/web/: .env.example  Dockerfile  Dockerfile.dev  NEXT15-FIX.md  README-i18n.md  REDIRECT-FIX.md  package-minimal.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/docs/: AB_TESTING_ARCHITECTURE.md  AB_TESTING_ENHANCED.md  AB_TESTING_EXPLANATION.md  AB_TESTING_IMPLEMENTATION.md  PIXEL_TRACKING_GUIDE.md  PIXEL_TRACKING_IMPLEMENTATION.md
apps/web/prompts/: campaign_draft.md  campaign_template.md  dashboad_ab_test_.md  logic_type_comonent_split.md
apps/web/src/: global.d.ts  middleware.ts  navigation.ts
apps/web/src/app/: globals.css  layout.tsx  providers.tsx
apps/web/src/app/[locale]/: layout.tsx  (+1 more)
apps/web/src/config/: dashboard-navigation.ts  navigation.ts
apps/web/src/i18n/: request.ts  routing.ts
apps/web/src/lib/: apollo.ts
apps/web/src/locales/: en.json  fr.json
apps/web/src/types/: common.ts  dashboard.ts
infra/: docker-compose.dev.yml
infra/helm/ai4local/: Chart.yaml  values.yaml
n8n/workflows/: content-generation-workflow.json
old.github/: copilot-instructions.md
old.github/instructions/: api.instructions.md  devops.instructions.md  rust.instructions.md
prompts/: campaign_create  campaigns  dashboard_accueil  migrate_v18  notification
services/ai-content-service/: Cargo.toml
services/ai-content-service/src/: main.rs
services/api-gateway/: package.json  tsconfig.json
services/api-gateway/src/: main.ts
services/ml-service/: pyproject.toml
services/ml-service/src/: main.py
shared/: package.json  tsconfig.json  tsconfig.tsbuildinfo
shared/src/: index.ts
shared/src/types/: index.ts
shared/src/utils/: index.ts
(+330 files in other folders)
