[package]
name = "ai-content-service"
version = "1.0.0"
edition = "2021"
description = "Service de génération de contenu IA haute performance"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
mongodb = "2.7"
redis = { version = "0.24", features = ["tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"

[[bin]]
name = "ai-content-service"
path = "src/main.rs"